--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 #playstop {
-    margin: 2rem;
+    margin: 1.4rem;
     background-color: Transparent;
     background-repeat: no-repeat;
     border: none;
@@ -28,8 +28,8 @@ body {
 .container {
     background-color: white;
     background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7));
-    width: 500px;
-    height: 110px;
+    width: 450px;
+    height: 90px;
     border-radius: .8rem;
     display: table;
     margin-right: auto;
@@ -42,15 +42,24 @@ body {
     background-blend-mode: overlay;
     background-size: contain;
     background-repeat: no-repeat;
-    background-size: 130px 110px;
-    width: 130px;
-    height: 110px;
+    background-size: 100px 90px;
+    width: 100px;
+    height: 90px;
     border-top-left-radius: .8rem;
     border-bottom-left-radius: .8rem;
 }
 
-p {
-    font-family: Poppins, Helvetica, "sans-serif"
+.text {
+    line-height: .7;
+    font-family: Poppins, Helvetica, "sans-serif";
+}
+
+.artist {
+    font-size: .8em;
+}
+
+.title {
+    font-size: 1em;
 }
 
 .info {
