--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,11 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     margin: auto;
+    background-position: center;
 }
 
 #playstop {
-    margin: 1.4rem;
+    margin: 1.5rem;
     background-color: Transparent;
     background-repeat: no-repeat;
     border: none;
@@ -38,30 +39,102 @@ body {
 }
 
 .pict {
-    background-image: url("asset/bg.png"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+    background-image: url("asset/bg.png"), linear-gradient(rgba(0, 0, 0, 0.27), rgba(0, 0, 0, 0.27));
     background-blend-mode: overlay;
     background-size: contain;
     background-repeat: no-repeat;
-    background-size: 100px 90px;
+    background-size: 100px 95px;
     width: 100px;
-    height: 90px;
+    height: 95px;
     border-top-left-radius: .8rem;
     border-bottom-left-radius: .8rem;
 }
 
 .text {
-    line-height: .7;
+    line-height: .5;
     font-family: Poppins, Helvetica, "sans-serif";
 }
 
 .artist {
-    font-size: .8em;
+    font-size: 18px;
+    font-weight: lighter;
+    color: #456274;
+    margin-bottom: 8px;
 }
 
 .title {
-    font-size: 1em;
+    font-size: 22px;
+    font-weight: bold;
+    color: #2e4b5e;
 }
 
 .info {
     padding-left: .8em;
 }
+
+#volume {
+    size: 5px;
+}
+
+/* .play {
+    display: block;
+    width: 0;
+    height: 0;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-left: 30px solid #2c3e50;
+    // border-bottom: 20px solid transparent; 
+    margin: 100px auto 20px auto;
+    position: relative;
+    z-index: 1;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    left: 10px;
+  }
+
+  .play:before {
+    content: "";
+    position: absolute;
+    top: -30px;
+    left: -50px;
+    bottom: -30px;
+    right: -10px;
+    border-radius: 50%;
+    border: 5px solid #2c3e50;
+    z-index: 2;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+  }
+
+  .play:after {
+    content: "";
+    opacity: 0;
+    transition: opacity 0.6s;
+    -webkit-transition: opacity 0.6s;
+    -moz-transition: opacity 0.6s;
+  }
+
+  .play:hover:before,
+  .play:focus:before {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+  }
+
+  .play.active {
+    border-color: transparent;
+  }
+
+  .play.active:after {
+    content: "";
+    opacity: 1;
+    width: 10px;
+    height: 25px;
+    background: #2c3e50;
+    position: absolute;
+    right: 4px;
+    top: -12px;
+    border-left: 20px solid #2c3e50;
+  } */
