--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("asset/bodybg.png"), linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
+    background-color: rgba(245, 250, 253, 1);
     background-blend-mode: overlay;
     background-size: cover;
     background-repeat: no-repeat;
@@ -28,7 +28,7 @@ body {
 
 .container {
     background-color: white;
-    background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7));
+    /* background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)); */
     width: 450px;
     height: 90px;
     border-radius: .8rem;
@@ -36,6 +36,9 @@ body {
     margin-right: auto;
     margin-left: auto;
     margin-top: 10%;
+    box-shadow: 6px 6px 19px -2px rgba(110, 110, 110, 0.75);
+    -webkit-box-shadow: 6px 6px 19px -2px rgba(110, 110, 110, 0.75);
+    -moz-box-shadow: 6px 6px 19px -2px rgba(110, 110, 110, 0.75);
 }
 
 .pict {
@@ -56,7 +59,7 @@ body {
 }
 
 .artist {
-    font-size: 18px;
+    font-size: 15px;
     font-weight: lighter;
     color: #456274;
     margin-bottom: 8px;
